solved the theme flicker

--- a/src/store_front_react/app/globals.css
+++ b/src/store_front_react/app/globals.css
@@ -18,10 +18,22 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+}
+
+
+
+.show-in-light,
+.show-in-dark {
+  display: none;
+}
+
+html[data-theme='dark'] .show-in-dark {
+  display: inline-block;
+}
+
+html[data-theme='light'] .show-in-light {
+  display: inline-block;
 }
